# hidracpp

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cmake.yml
build-hidra-Desktop_Qt_5_3_MSVC2013_64bit-Debug/debug/: hidra.exe_manifest.rc
build-hidra-Desktop_Qt_5_3_MSVC2013_64bit-Debug/release/: qrc_res.cpp
dev/projeto/: Hidra.uml
dev/testes/: ahmes_instructions_1.ahd  ahmes_instructions_2.ahd  assembler.rad  neander_instructions.ndr  ramses_instructions.rad
dev/trabalhos/: Afonso Ferrer.mem  Alexandre Leuck.rad  Ana Mativi.mem  Ana Mativi.rad  Bernardo Lignati (doisbytera).rad  Bernardo Lignati (missaoimpossivel).rad  Bernardo Lignati (try1).rad  Bernardo Lignati.rad  Felipe Lima.rad  Igor Moura.rad  Renato Leme.rad
dev/trabalhos/after-hidra-run/: Ana Mativi 262461a 114135i.mem  Bernardo Lignati (try1) 1115a 503i.mem
dev/trabalhos/after-wramses-run/: Alexandre Leuck 80a 34i.mem  Bernardo Lignati (doisbytera) 990a 441i.mem  Bernardo Lignati 672a 368i.mem  Felipe Lima 534a 246i.mem  Igor Moura 375a 171i.mem
dev/trabalhos/daedalus-build/: Alexandre Leuck.mem  Ana Mativi.mem  Bernardo Lignati (doisbytera).mem  Bernardo Lignati (missaoimpossivel).mem  Bernardo Lignati (try1).mem  Bernardo Lignati.mem  Felipe Lima.mem  Renato Leme.mem
diagramas/: Hidra.uml  Hidra.~ml
docs/exemplos/: Hidra_ExemplosNeander.ndr  Hidra_ExemplosNeander.ned  exemplos_neander.ndr
docs/guia-rapido/: Hidra_GuiaRapido.docx
docs/reference/: HidraHelp.docx  Hidra_Referencia.docx
help/: ahmes.html  mnemonicos.html  neander.html  registradores.html
help/guia_rapido/: QuickGuide.docx  guia_rapido.txt
help/html/: help.html
hidra/: ahmesmachine.cpp  ahmesmachine.h  bit.cpp  bit.h  byte.cpp  byte.h  flag.cpp  flag.h  flagwidget.ui  hidra.pro  hidracli.cpp  hidracli.h  hidracodeeditor.cpp  hidragui.cpp  hidragui.cpp.autosave  hidragui.h  hidragui.ui  hidrahighlighter.cpp  hidrahighlighter.h  instruction.cpp  instruction.h  machine.cpp  machine.h  main.cpp  ndr_test.ndr  neandermachine.cpp  neandermachine.h  notes.txt  ramsesmachine.cpp  ramsesmachine.h  register.cpp  register.h  registerwidget.cpp  registerwidget.h  res.qrc  testesdoidosana.cpp  to-do.txt
hidra/core/: addressingmode.cpp  addressingmode.h  byte.cpp  byte.h  flag.cpp  flag.h  instruction.cpp  instruction.h  machine.cpp  machine.h  main.cpp  register.cpp  register.h
hidra/gui/: flagwidget.cpp  flagwidget.h  hidracli.cpp  hidracli.h  hidracodeeditor.cpp  hidracodeeditor.h  hidragui.cpp  hidragui.h  hidragui.ui  hidrahighlighter.cpp  registerwidget.cpp  registerwidget.ui
hidra/machines/: ahmesmachine.cpp  ahmesmachine.h  neandermachine.cpp  neandermachine.h  ramsesmachine.cpp  ramsesmachine.h  voltamachine.h
src/: CMakeLists.txt  hidra.pro  main.cpp  to-do.txt
src/core/: addressingmode.cpp  addressingmode.h  baseconversor.cpp  baseconversor.h  flag.cpp  flag.h  instruction.cpp  instruction.h  invalidconversorinput.cpp  invalidconversorinput.h  machine.cpp  machine.h  main.cpp  pointconversor.cpp  pointconversor.h  register.cpp  register.h
src/gui/: about.cpp  about.ui  baseconversor.cpp  baseconversor.h  baseconversor.ui  baseconversordialog.cpp  baseconversordialog.h  baseconversordialog.ui  findreplacedialog.cpp  findreplacedialog.h  findreplacedialog.ui  flagwidget.ui  hidracodeeditor.cpp  hidracodeeditor.h  hidragui.cpp  hidragui.h  hidragui.ui  hidragui.ui.autosave  hidrahighlighter.cpp  hidrahighlighter.h  pointconversor.cpp  pointconversor.h  pointconversor.ui  pointconversordialog.cpp  pointconversordialog.h  pointconversordialog.ui  visorwidget.cpp  visorwidget.h  visorwidget.ui
src/machines/: ahmesmachine.cpp  ahmesmachine.h  cesarmachine.cpp  cesarmachine.h  cromagmachine.cpp  cromagmachine.h  neandermachine.cpp  periclesmachine.cpp  periclesmachine.h  pitagorasmachine.cpp  pitagorasmachine.h  queopsmachine.cpp  queopsmachine.h  ramsesmachine.cpp  ramsesmachine.h  regmachine.cpp  regmachine.h  voltamachine.cpp  voltamachine.h
src/tests/: CMakeLists.txt
src/tests/baseconversortest/: CMakeLists.txt  baseconversortest.pro  tst_baseconversortest.cpp
src/tests/pointconversortest/: CMakeLists.txt  pointconversortest.pro  tst_pointconversortest.cpp
src/tests/simulationtests/: CMakeLists.txt  TestNeander.mem  simulationtestcase.h  tst_neander.cpp
src/tests/simulationtests/Ahmes/: CMakeLists.txt  tst_ahmes.cpp
src/tests/simulationtests/Cesar/: CMakeLists.txt  tst_cesar.cpp
src/tests/simulationtests/Cromag/: CMakeLists.txt
src/tests/simulationtests/Neander/: CMakeLists.txt  tst_neander.cpp
src/tests/simulationtests/Pericles/: CMakeLists.txt  tst_pericles.cpp
src/tests/simulationtests/Pitagoras/: CMakeLists.txt
src/tests/simulationtests/Queops/: CMakeLists.txt
src/tests/simulationtests/Ramses/: CMakeLists.txt  tst_ramses.cpp
src/tests/simulationtests/Reg/: CMakeLists.txt
src/tests/simulationtests/Volta/: CMakeLists.txt
testes/: ahmes_instructions_1.ahd  ahmes_instructions_2.ahd  documento_de_testes.txt  neander_instructions.ndr  ramses_instructions.rad
